--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -68,6 +68,30 @@
           color: var(--text-link-hover);
         }
       }
+
+      @media (max-width: 768px) {
+        & {
+          // display: none;
+          position: absolute;
+          flex-direction: column;
+          top: 100px;
+          right: -350px;
+          background-color: white;
+          width: 350px;
+          height: calc(100vh - 50px);
+          padding-top: 20px;
+          padding-left: 20px;
+          transition: 0.3s;
+
+          &.view {
+            right: 0px;
+          }
+
+          & li {
+            margin-top: 0px;
+          }
+        }
+      }
     }
 
     .color-icon {
@@ -81,4 +105,10 @@
 
 .white {
   color: white;
+}
+
+@media (min-width: 768px) {
+  .nav-bars {
+    display: none;
+  }
 }
