edit dark mood colors

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -76,7 +76,7 @@
           flex-direction: column;
           top: 100px;
           right: -350px;
-          background-color: white;
+          background-color: var(--container-background-color);
           width: 350px;
           height: calc(100vh - 50px);
           padding-top: 20px;
