--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,5 @@
   <div class="nav">
     <app-navbar></app-navbar>
   </div>
-  <div class="body">
-    <app-banner class="c-class" id="banner"></app-banner>
-    <app-chief-section class="c-class" id="chefs"></app-chief-section>
-    <app-gallery-section class="c-class" id="food"></app-gallery-section>
-    <app-location-contact id="map" class="c-class"></app-location-contact>
-  </div>
+  <router-outlet></router-outlet>
 </div>
