--- a/src/app/components/gallery-section/gallery-section.component.html
+++ b/src/app/components/gallery-section/gallery-section.component.html
@@ -80,4 +80,11 @@
       </div>
     </div>
   </div>
+
+  <div class="menu">
+    to Menu
+    <a routerLink="menu">
+      <fa-icon style="font-size: 34px" [icon]="food"></fa-icon>
+    </a>
+  </div>
 </div>
