--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,9 @@
   <nav>
     <div class="logo">
       <a routerLink="">foodera <span>.</span> </a>
+      <a routerLink="/cart">
+        <fa-icon [icon]="cart"></fa-icon>
+      </a>
     </div>
     <ul class="links" #links>
       <li>
