--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,6 +22,7 @@
         class="errors"
         [hidden]="formGroup.get('email')?.untouched"
         class="text-red-400"
+        style="width: 300px"
       >
         <small *ngIf="formGroup.get('email')?.errors?.['required']"
           >email required</small
@@ -46,6 +47,7 @@
         class="errors"
         [hidden]="formGroup.get('password')?.untouched"
         class="text-red-400"
+        style="width: 300px"
       >
         <small *ngIf="formGroup.get('password')?.errors?.['required']"
           >password required</small
@@ -56,12 +58,25 @@
         >
       </div>
 
-      <button
-        class="my-5 px-4 py-2 border-round bg-bluegray-900 text-white cursor-pointer"
-        [disabled]="loginForm.invalid"
-      >
-        Login
-      </button>
+      <div class="remember">
+        <a href="">forget your password</a>
+      </div>
+
+      <div class="buttons mt-5">
+        <button
+          class="px-4 py-2 border-round bg-bluegray-900 text-white cursor-pointer"
+          [disabled]="loginForm.invalid"
+        >
+          Login
+        </button>
+        <a routerLink="/register">
+          <button
+            class="px-4 py-2 border-round bg-bluegray-900 text-white cursor-pointer"
+          >
+            Sign Up
+          </button>
+        </a>
+      </div>
     </form>
   </div>
 </div>
