--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -4,7 +4,8 @@
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 h2 {
