--- a/src/app/menu-items/item/item.component.html
+++ b/src/app/menu-items/item/item.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <span><img [src]="card.img" alt="" /></span>
+  <img [src]="card.img" alt="" />
   <div class="title-fav">
     <p>{{ card.name }}</p>
     <fa-icon [icon]="heart"></fa-icon>
